# mem0-with-Deepseek

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_stream.py
api/: dependencies.py  models.py
api/router/: chat.py  memory.py
chroma_db/: chroma.sqlite3
config/: embedding.py  llm.py  mem0_setting.py  neo4j_config.py
core/: agent.py  memory_service.py
